fix: fix focus in high contrast mode

--- a/packages/components/src/button/Button.module.css
+++ b/packages/components/src/button/Button.module.css
@@ -21,6 +21,11 @@
   &[data-focus-visible],
   &:focus-visible {
     box-shadow: focus;
+
+    @media (forced-colors: active) {
+      outline-offset: 2px;
+      outline: 3px solid Highlight !important;
+    }
   }
 
   &:hover {
